--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -1,4 +1,4 @@
-.app__work {
+.app__works {
     flex: 1;
     width: 100%;
     flex-direction: column;
@@ -151,7 +151,5 @@
         padding: 0.5rem 1rem;
         background-color: #fff;
         top: -25px;
-        
-
     }
 }
