--- a/src/App.scss
+++ b/src/App.scss
@@ -116,6 +116,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+
+      cursor: pointer;
   
       transition: all 0.3s ease-in-out;
   
