--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -13,10 +13,25 @@
     position: fixed;
     z-index: 2;
 
+    animation: toDown .5s ease 0s 1 normal forwards;
+
+    @keyframes toDown {
+        0% {
+            opacity: 0;
+            transform: translateY(-250px);
+        }
+    
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
 }
 
 
 .app__navbar-logo {
+
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -24,6 +39,7 @@
     img {
         width: 90px;
         height: 20px;
+
         @media screen and (min-width: 2000px) {
             width: 180px;
             height: 40px;
@@ -38,6 +54,21 @@
     align-items: center;
 
     list-style: none;
+
+    animation: toDown 1s ease 0s 1 normal forwards;
+
+    @keyframes toDown {
+        0% {
+            opacity: 0;
+            transform: translateY(-250px);
+        }
+    
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
+    }
+
 
     li {
         margin: 0 1rem;
@@ -78,11 +109,13 @@
     }
 
     @media screen and (max-width: 900px) {
-        display: none;        
+        display: none;
     }
+
+
 }
 
-.app__navbar-menu{
+.app__navbar-menu {
     width: 35px;
     height: 35px;
     border-radius: 50%;
@@ -92,45 +125,48 @@
     justify-content: center;
     align-items: center;
     background: var(--secondary-color);
-    svg{
+
+    svg {
+        cursor: pointer;
         width: 70%;
         height: 70%;
         color: var(--white-color);
     }
 
-    div{
+    div {
         position: fixed;
         top: 0;
         bottom: 0;
-        right: 0;
         z-index: 5;
 
 
         padding: 1rem;
 
-        width: 80%;
+        width: 40%;
         height: 100vh;
 
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
         flex-direction: column;
-        
+
         background: url('../../assets/bgWhite.png');
         background-color: var(--white-color);
         background-size: cover;
         background-repeat: repeat;
 
         box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
+        transition: all 0.7s ease;
 
-        svg{
+        svg {
             width: 35px;
             height: 35px;
             color: var(--secondary-color);
             margin: 0.5rem 1rem;
         }
-        ul{
-            list-style:  none;
+
+        ul {
+            list-style: none;
             margin: 0;
             padding: 0;
             height: 100%;
@@ -142,9 +178,13 @@
             align-items: flex-start;
             flex-direction: column;
         }
-        li{
+
+        li {
             margin: 1rem;
-            a{
+            
+            a {
+                cursor: pointer;
+
                 color: var(--gray-color);
                 text-decoration: none;
                 font-size: 1rem;
@@ -152,18 +192,30 @@
                 font-weight: 500;
 
                 transition: all 0.3s ease-in-out;
+
                 &:hover {
                     color: var(--secondary-color);
                 }
 
             }
         }
+
         @media screen and (min-width : 900px) {
-            display: none;            
+            display: none;
         }
     }
+
     @media screen and (min-width : 900px) {
-        display: none;            
+        display: none;
     }
 
+}
+
+.show {
+    right: 0;
+
+}
+
+.hide {
+    right: -100%;
 }
