--- a/src/container/Footer/Footer.scss
+++ b/src/container/Footer/Footer.scss
@@ -39,6 +39,7 @@
         a{
             text-decoration: none;
             font-weight: 500;
+            color: var(--secondary-color);
         }
 
         &:hover{
