change colors and icon to navbar

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -37,8 +37,8 @@
     align-items: center;
 
     img {
-        width: 90px;
-        height: 20px;
+        width: 110px;
+        height: 35px;
 
         @media screen and (min-width: 2000px) {
             width: 180px;
@@ -97,13 +97,13 @@
             transition: all 0.3s ease-in-out;
 
             &:hover {
-                color: var(--secondary-color);
+                color: var(--primary-color);
             }
         }
 
         &:hover {
             div {
-                background: var(--secondary-color);
+                background: var(--primary-color);
             }
         }
     }
@@ -142,7 +142,7 @@
 
         padding: 1rem;
 
-        width: 40%;
+        width: 60%;
         height: 100vh;
 
         display: flex;
@@ -156,7 +156,7 @@
 
         backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
-        background-color: rgba(255, 251, 251, 0.8);
+        background-color: rgba(66, 66, 66, 0.8);
 
 
         box-shadow: 0 0 20px rgba(168, 168, 168, 0.15);
@@ -201,17 +201,17 @@
                 transition: all 0.3s ease-in-out;
 
                 &:hover {
-                    color: var(--secondary-color);
+                    color: var(--primary-color);
                 }
 
                 &::after {
-                    color: var(--secondary-color);
+                    color: var(--primary-color);
                     content: '';
                     width: 0px;
                     height: 1px;
                     display: block;
-                    color: var(--secondary-color);
-                    background: var(--secondary-color);
+                    color: var(--primary-color);
+                    background: var(--primary-color);
                     transition: 300ms;
                   }
                   
