--- a/src/App.scss
+++ b/src/App.scss
@@ -109,10 +109,11 @@
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      background-color: var(--white-color);
       margin: 0.25rem 0;
       border: 1px solid var(--lightGray-color);
-  
+
+      background-color: rgb(53, 88, 88);
+
       display: flex;
       justify-content: center;
       align-items: center;
@@ -149,6 +150,11 @@
       }
     }
   }
+  // .gray{
+  //   div{
+  //   }
+  // }
+  // .black
   
   .app__navigation {
     display: flex;
@@ -179,9 +185,13 @@
   }
   
   @media screen and (max-width: 500px) {
-    .app__navigation,
-    .app__social {
+    .app__navigation {
       display: none;
+    }
+    .app__social{
+      display: none;
+      position: absolute;
+      margin-bottom: 1px;
     }
   
     .copyright {
