--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -60,13 +60,13 @@
 
     .badge-cmp, .tag-cmp{
         padding: 1rem 2rem;
-        border: var(--white-color);
+        border: var(--secondary-color);
 
         border-radius: 15px;
         flex-direction: row;
         width: auto;
 
-        box-shadow: 0 0 20px rgba(0, 0, 0, .1);
+        box-shadow: 0 0 20px rgba(252, 247, 247, 0.1);
     }
 
     .tag-cmp{
