--- a/src/container/Work/Work.scss
+++ b/src/container/Work/Work.scss
@@ -27,7 +27,7 @@
 
         &:hover {
             background-color: var(--secondary-color);
-            color: #fff;
+            color: var(--white-color);
         }
 
         @media screen and (min-width: 2000px) {
@@ -37,7 +37,7 @@
     }
 
     .item-active {
-        background-color: var(--secondary-color);
+        background-color: var(--white-color);
         color: #fff;
     }
 }
@@ -56,14 +56,14 @@
         padding: 1rem;
 
         border-radius: 0.5rem;
-        background-color: #fff;
+        background-color: var(--white-color);
         color: #000;
 
         cursor: pointer;
         transition: all 0.3s ease;
 
         &:hover {
-            box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 25px rgba(87, 86, 86, 0.2);
         }
 
         @media screen and (min-width: 2000px) {
@@ -117,7 +117,7 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(121, 115, 115, 0.5);
 
         color: #fff;
         margin: 1rem;
