--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap");
 
-:root {
+/* :root {
   --font-base: "DM Sans", sans-serif;
 
   --primary-color: #edf2f8;
@@ -10,6 +10,17 @@
   --gray-color: #6b7688;
   --brown-color: #46364a;
   --white-color: #ffffff;
+} */
+:root {
+  --font-base: "DM Sans", sans-serif;
+
+  --primary-color: #121212;
+  --secondary-color: #FFFFFF;
+  --black-color: #FFFFFF;
+  --lightGray-color: #302C2C ;
+  --gray-color: #FFFFFF;
+  --brown-color: #FFFFFF;
+  --white-color: #333232;
 }
 
 * {
